branches/v1.0.x/docs/6.0. Upgrade Path.md
# Upgrade Path

_(c) AMWA 2016, CC Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)_

As is common with web APIs, over time changes will be made to support new use cases and deprecate old ways of working. The NMOS APIs are no different, and have been designed to permit in-service upgrades across a facility which may be running large amounts of equipment with support for different versions of these specifications.

API versioning is specified in the [APIs](2.0.%20APIs.html) documentation, with procedures for handling upgrades described below.

## Requirements for Nodes (Node APIs)

Implementers of the Node API must support at least one API version, and may support more than one at a time. Note however that a Node must only perform interactions with a Registration API at a single version. Nodes implementing multiple API versions may provide a user-configurable choice for which API version to register using.

Registrations with a Registration API must only proceed if the Node API version implemented exactly matches the API version used by the Registration API.

## Requirements for Registries (Registration and Query APIs)

Implementers of the Registration and Query API must support at least one API version. It is however strongly recommended that Registration and Query APIs fully support at least two and preferably more consecutive API versions (if released). In doing so, facilities which include a large number of Nodes may stagger their equipment upgrades whilst maintaining compatibility with a single registry.
